# transcendence

./: README.md  index.html
project/backend/: .env.sample  Makefile  dockerfile  pyproject.toml  requirements.txt  start.sh
project/backend/.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
project/backend/app/: drop-table.sh
project/backend/app/api/: func.py  models.py  urls.py  views.py
project/backend/app/api/migrations/: 0001_initial.py  0002_alter_appuser_password.py  0002_alter_friends_status_friends_unique_player_pair.py
project/backend/app/api/models/: __init__.py  auth.py  avatarImage.py  friend.py  match.py  user.py
project/backend/app/api/routes/: friend.py  match.py  user.py
project/backend/app/app/: asgi.py  settings.py  urls.py
project/backend/app/app/services/: env_manager.py
project/backend/app/appuac/: apps.py  url.py
project/backend/app/appuac/migrations/: 0001_initial.py  0006_user_frind.py  (+10 more)
project/backend/app/chat/: models.py  url.py
project/backend/app/pong/: apps.py  game_consumer.py  game_engine.py  models.py  player.py  routing.py  tournament_consumer.py  urls.py
project/backend/app/templates/: index.html
project/backend/test_e2e/: my_test.py  rest_test.py  test_full_tour.py  test_game.py  test_tour_lobby.py
sample_django_ninja/: Makefile  pyproject.toml
sample_django_ninja/.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
sample_django_ninja/app/: asgi.py  settings.py  urls.py
sample_django_ninja/uac/: route.py
sample_django_ninja/uac/migrations/: 0001_initial.py  0002_alter_token_user_delete_appuser.py
sample_django_ninja/uac/models/: user.py
sample_django_ninja/uploadfile/: apps.py  models.py
sample_django_ninja/uploadfile/migrations/: 0001_initial.py
(+224 files in other folders)
