[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["narin <narin.w@lexnetix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-ninja = "^1.1.0"
django-cors-headers = "^4.3.1"
nanoid = "^2.0.0"
pytz = "^2024.1"
pillow = "^10.4.0"
faker = "^26.0.0"
channels = {extras = ["daphne"], version = "^4.1.0"}
channels-redis = "^4.2.0"
rich = "^13.7.1"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.7.1"
django-ninja = "^1.1.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
